finished part 2 auth
